[package]
name = "lvm_multi_api"
description = "A library for interacting with multiple Large Vision Model (LVM) APIs."
readme = "README.md"
license = "MIT"
version = "0.1.0"
edition = "2024"
authors = ["Thomas Young <35073576+DrakeRichards@users.noreply.github.com>"]

[features]
default = ["openai", "xai", "automatic1111"]
openai = ["async-openai"]
xai = ["async-openai"]
automatic1111 = []
clap = ["dep:clap", "dep:strum"]

[dependencies]
anyhow = "1.0.97"
async-openai = { version = "0.28.0", optional = true, features = ["byot"] }
async-trait = "0.1.88"
base64 = "0.22.1"
clap = { version = "4.5.32", optional = true, features = ["derive"] }
dotenvy = "0.15.7"
reqwest = "0.12.15"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
strum = { version = "0.27.1", optional = true, features = [
    "derive",
    "strum_macros",
] }
tokio = { version = "1.44.1", features = ["rt"] }

[dev-dependencies]
tokio = { version = "1.44.1", features = ["full"] }
tempfile = "3.18.0"
serial_test = "3.2.0"

[lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
